将静态文件改为模板渲染；添加一些路由判断

--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -80,7 +80,7 @@
                     const res = data.res
                     // 验证成功，登录考试系统
                     if (res === 0) {
-                        $(location).attr('href', 'index.html')
+                        $(location).attr('href', '/index')
                         return
                     }
                     // 需要更改密码 
@@ -88,7 +88,7 @@
                         sessionStorage.setItem('userId', userId)
                         sessionStorage.setItem('password', password)
                         alert(data.msg)
-                        window.location = 'passchange.html'
+                        window.location = '/passchange'
                         return
                     }
                     // 验证失败
