--- a/resources/templates/remote.html
+++ b/resources/templates/remote.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>监考端</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='/static/css/main.css'>
   <link href="#" rel="shortcut icon">
 </head>
 
@@ -18,9 +18,9 @@
   </div>
 
 </body>
-<script src="js/lib/adapter.js"></script>
+<script src="/static/js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src='js/room-peer.js'></script>
-<script src='js/room-remote.js'></script>
+<script src='/static/js/room-peer.js'></script>
+<script src='/static/js/room-remote.js'></script>
 
 </html>
