--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>考生端</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='/static/css/main.css'>
   <link href="#" rel="shortcut icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -54,10 +54,10 @@
   </div>
 
 </body>
-<script src="js/lib/adapter.js"></script>
+<script src="/static/js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src='js/room-peer.js'></script>
-<script src='js/room-local.js'></script>
-<script src='js/script-local.js'></script>
+<script src='/static/js/room-peer.js'></script>
+<script src='/static/js/room-local.js'></script>
+<script src='/static/js/script-local.js'></script>
 
 </html>
