--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -24,10 +24,6 @@
 
   <div id="camera-controls">
     <button type="button" class="btn btn-primary btn-block" id="btnSystem">开启考试系统</button>
-    <!-- <button type="button" class="btn btn-secondary"></button> -->
-    <!-- <button type="button" class="btn btn-primary btn-block" id="btnCameraOpen">开启摄像头</button>
-    <button type="button" class="btn btn-secondary btn-block" id="btnCameraClose" disabled>关闭摄像头</button> -->
-
   </div>
   <br>
   <div id="screen-controls">
@@ -40,9 +36,7 @@
       <input class="form-check-input" type="checkbox" id="switchCameraAudio" disabled>
       <label class="form-check-label" for="flexSwitchCheckDefault">麦克风音频</label>
     </div>
-    
-    <!-- <button type="button" class="btn btn-primary btn-block" id="btnScreenOpen">开启屏幕共享</button>
-    <button type="button" class="btn btn-secondary btn-block" id="btnScreenClose" disabled>关闭屏幕共享</button> -->
+
     <div class="form-check form-switch">
       <input class="form-check-input" type="checkbox" id="switchScreen" disabled>
       <label class="form-check-label" for="flexSwitchCheckDefault">屏幕共享</label>
@@ -51,6 +45,10 @@
       <input class="form-check-input" type="checkbox" id="switchScreenAudio" disabled>
       <label class="form-check-label" for="flexSwitchCheckDefault">电脑音频</label>
     </div>
+  </div>
+
+  <div id="logout-controls">
+    <button type="button" class="btn btn-primary btn-block" id="logout">退出登录</button>
   </div>
 
 </body>
