--- a/resources/templates/remote.html
+++ b/resources/templates/remote.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='/static/styles/main.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/static/styles/room.css'>
+    <link href="#" rel="shortcut icon">
 </head>
 <body>
 
@@ -88,12 +89,10 @@
     </main>
     
 </body>
-<!-- <script type="text/javascript" src="js/AgoraRTC_N-4.11.0.js"></script> -->
-<!-- <script type="text/javascript" src="js/agora-rtm-sdk-1.4.4.js"></script> -->
-<!-- <script type="text/javascript" src="js/room.js"></script> -->
-<!-- <script type="text/javascript" src="js/room_rtm.js"></script> -->
-<!-- <script type="text/javascript" src="js/room_rtc.js"></script> -->
+
 <script src="/static/js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script src='/static/js/room-peer.js'></script>
+<script type="text/javascript" src="/static/js/room_rtm.js"></script>
+<script type="text/javascript" src="/static/js/room_rtc.js"></script>
 </html>
