--- a/resources/templates/remote.html
+++ b/resources/templates/remote.html
@@ -91,6 +91,7 @@
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script src='/static/js/room-peer.js'></script>
 <script src='/static/js/room-rtm.js'></script>
+<!-- <script src='/static/js/room-remote.js'></script> -->
 <!-- <script src='/static/js/room-rtc.js'></script> -->
 
 </html>
