用户加入离开信息完成

--- a/resources/templates/remote.html
+++ b/resources/templates/remote.html
@@ -77,9 +77,9 @@
 
                 <div id="messages"></div>
 
-                <form id="message__form">
-                    <input type="text" name="message" placeholder="Send a message...." />
-                </form>
+                <!-- <form id="message__form">
+                    <input type="text" name="message" placeholder="功能暂未" />
+                </form> -->
 
             </section>
         </div>
