--- a/resources/static/styles/room.css
+++ b/resources/static/styles/room.css
@@ -208,13 +208,13 @@
   justify-content: center;
   align-items: center;
   border:2px solid #b366f9;
-  border-radius: 50%;
+  border-radius: 5%;
   cursor: pointer;
   overflow: hidden;
-  height: 300px;
-  width: 300px;
+  height: 500px;
+  width: 900px;
 
-  background-image: url("/images/logo.png");
+  background-image: url("/static/images/logo.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 75px;
@@ -225,9 +225,9 @@
   width: 100%;
 }
 
-.video-player video{
+/* .video-player video{
   border-radius: 50%;
-}
+} */
 
 @media (max-width: 1400px) {
   .video__container{
