--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -54,7 +54,8 @@
 </body>
 <script src="/static/js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src='/static/js/room-peer.js'></script>
+<!-- <script src='/static/js/room-peer.js'></script> -->
+<script src='/static/js/peer.js'></script>
 <script src='/static/js/script-local.js'></script>
 
 </html>
