--- a/resources/templates/remote.html
+++ b/resources/templates/remote.html
@@ -97,7 +97,8 @@
 
 <script src="/static/js/lib/adapter.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-<script src='/static/js/room-peer.js'></script>
+<!-- <script src='/static/js/room-peer.js'></script> -->
+<script src='/static/js/peer.js'></script>
 <script src='/static/js/room-rtm.js'></script>
 <!-- <script src='/static/js/room-remote.js'></script> -->
 <!-- <script src='/static/js/room-rtc.js'></script> -->
