前端部分资源本地化

--- a/source/resources/templates/remote.html
+++ b/source/resources/templates/remote.html
@@ -96,7 +96,7 @@
 </body>
 
 <script src="/static/js/lib/adapter.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script src="/static/jquery.js"></script>
 <!-- <script src='/static/js/room-peer.js'></script> -->
 <script src='/static/js/peer.js'></script>
 <script src='/static/js/room-rtm.js'></script>
